# apertium-eo-en

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  ambiguity_calculation.py  apertium-eo-en.en-eo.antaux2_t2x  apertium-eo-en.en-eo.antaux_t2x  apertium-eo-en.en-eo.genitive.t1x  apertium-eo-en.en-eo.rlx  apertium-eo-en.en-eo.t1x  apertium-eo-en.en-eo.t2x  apertium-eo-en.en-eo.t3x  apertium-eo-en.en.dix  apertium-eo-en.en.tsx  apertium-eo-en.eo-en.antaux_t2x  apertium-eo-en.eo-en.dix  apertium-eo-en.eo-en.t1x  apertium-eo-en.eo-en.t2x  apertium-eo-en.eo-en.t3x  apertium-eo-en.eo-multiwords.txt  apertium-eo-en.eo.dix  apertium-eo-en.eo.dix.xml  apertium-eo-en.eo.eksperimenta_parto.dix  apertium-eo-en.eo.tsx  apertium-eo-en.post-eo.dix  check_others.sh  check_sint_tag.sh  configure.ac  en-eo-supervised.make  en-eo-unsupervised.make  en-eo.prob  hitparade-en.txt  modes.xml  multi-gen.sh  other-tests.sh  regression-tests.sh  testALL.sh  (+4 more)
corpa/: corpus-stat-en-eo.sh  corpus-stat-eo-en.sh  elpaki.sh  enwiki.crp.txt.bz2  eowiki.crp.txt.bz2  esperantowiki-xml2txt.py
corpa/bil/: batalo.txt  battle.txt  caravan.txt  in-into.tmx  intro-en.txt  intro-eo.txt  karavano.txt  letero.tmx  obama-en.txt  obama-eo.txt  remington.tmx
dev/: ald_tradukunet.eo-en.dix  apertium-eo-en.en_aldonota.dix  apertium-eo-en.eo-en-after-clean.dix  eval-Archimedes.apertium-1.0.txt  eval-Archimedes.en.txt  eval-Archimedes.post-edited.txt  eval-RussianEmpire.apertium.txt  eval-RussianEmpire.en.txt  eval-RussianEmpire.post-edited.txt  freeling.en-open-chopped.dix  gen-test.py  superblank-denumberer.py  superblank-numberer.py  tradukunet_missing_en_words.txt
eval140320/: original.txt  rezultoj.txt  traduko_apertium.txt  traduko_apertium_rev.txt  traduko_guglo.txt  traduko_guglo_rev.txt
eval140320-2/: originalo.txt  traduko_apertium.txt  traduko_apertium_rev.txt  traduko_guglo.txt  traduko_guglo_rev.txt
java/: apertium-eo-en.jpx  apertium-eo-en.jpx.local  build.xml
java/src/apertium/: EoAnalysation.java  GenerateNumbersForBidix.java  Iloj.java  LeguTradukuNet.java  Paro.java  leguAliajn.java
java/src/apertium_eo_en/: AldonuCxiujnVortojn.java  AldonuNeJamAldonitajnVortojn.java  GenerateNumbersForBidix.java  Iloj.java  LeguTradukuNet.java  Paro.java
java/src/apertium_eo_en/malnova/: FixInconsistency.java  GenerateNumbersForBidix.java  LeguAliajn.java
res/: esperanto_nouns_with_gender.txt  vortoj_kun_konata_vortklaso.txt
test/: en-eo-outstanding-chunker-expected.txt  en-eo-outstanding-generator-expected.txt  en-eo-outstanding-generator-gold.txt  en-eo-outstanding-input.txt  en-eo-outstanding-interchunk2-expected.txt  en-eo-outstanding-interchunk3-expected.txt  en-eo-outstanding-morph-expected.txt  en-eo-outstanding-postchunk-expected.txt  en-eo-outstanding-tagger-expected.txt  en-eo-proposed_future-chunker-expected.txt  en-eo-proposed_future-chunker2-expected.txt  en-eo-proposed_future-generator-expected.txt  en-eo-proposed_future-generator-gold.txt  en-eo-proposed_future-input.txt  en-eo-proposed_future-interchunk-expected.txt  en-eo-proposed_future-interchunk3-expected.txt  en-eo-proposed_future-morph-expected.txt  en-eo-proposed_future-postchunk-expected.txt  en-eo-proposed_future-tagger-expected.txt  en-eo-regression-chunker-expected.txt  en-eo-regression-chunker2-expected.txt  en-eo-regression-generator-expected.txt  en-eo-regression-generator-gold.txt  en-eo-regression-input.txt  en-eo-regression-interchunk2-expected.txt  en-eo-regression-interchunk3-expected.txt  en-eo-regression-morph-expected.txt  en-eo-regression-postchunk-expected.txt  en-eo-regression-pretransfer-expected.txt  en-eo-regression-tagger-expected.txt  en-eo-work-chunker2-expected.txt  en-eo-work-generator-expected.txt  en-eo-work-generator-gold.txt  en-eo-work-input.txt  en-eo-work-interchunk-expected.txt  en-eo-work-interchunk3-expected.txt  en-eo-work-morph-expected.txt  en-eo-work-postchunk-expected.txt  en-eo-work-tagger-expected.txt  eo-en-proposed_future-chunker-expected.txt  (+8 more)
